# TheiaSimulations

./: .gitignore  CMakeLists.txt  Makefile  PMTGenerator.py  README.md  eos.sh  genie_neutrino_cc2023_swap1_1000_1001.root  run_theia.sh  theia.mac  theia.sh  vis.mac  ~
config/: Config.hh.in  theia.sh.in
examples/c++/: timing_root.cc
install/include/: Config.hh  LaserballGenerator.hh  Theia.hh
install/share/theia/ratdb/: LED.ratdb  OPTICS_filters.ratdb
install/share/theia/ratdb/Theia/: PMTINFO.ratdb  Theia_25kt.geo
install/share/theia/ratdb/cal/examples/: CalibrationSphere.geo  CalibrationStick.geo
ratdb/: DICHROICONS.ratdb  LASERBALL.ratdb  PMTCHARGE.ratdb  PMTTRANSIT.ratdb  PMT_theia.ratdb
ratdb/Theia/: Theia.geo  Theia_25k_mod.geo  Theia_25kt.geo
ratdb/cal/: cs137_source.geo  dir_source.geo  dir_source_5mmactivity_25mmlen_15mmwide.geo  dir_source_5mmactivity_25mmlen_30mmwide.geo
ratdb/cal/examples/: CherenkovSource.geo
src/: CMakeLists.txt  GeoTheiaFactory.cc  HitmanProc.cc  LaserballGenerator.cc  NtupleProc.cc  Theia.cc  theia.cpp
src/include/: GeoTheiaFactory.hh  NtupleProc.hh
utilities/tensorfit/: README.md  train.py
